--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "sequelize-cli": "^6.6.1"
   }
 }
